@@ -35,6 +35,12 @@
          </DataType>
          <Description>String representing a file path to calculation file (HTML file generated by Spreadsheet convertor).</Description>
       </FormalParameter>
+      <FormalParameter Id="variables" Name="File path to variables definition" IsArray="false" Mode="IN">
+         <DataType>
+            <BasicType Type="STRING"/>
+         </DataType>
+         <Description>String representing a file path to variables file (CSV or XLSX file which describes the input and output file structure) - can be NULL.</Description>
+      </FormalParameter>
       <FormalParameter Id="result" Name="Calculation data result" IsArray="true" Mode="OUT">
          <DataType>
             <ExternalReference location="byte"/>
