@@ -421,6 +421,8 @@ public class SharkConstants {
    public static final String TOOL_AGENT_FORMAL_PARAMETER_CALCULATION_OUTPUT_TEMPLATE_FILEPATH = "calculation_output_template_filepath";
 
    public static final String TOOL_AGENT_FORMAL_PARAMETER_CALCULATION_FILEPATH = "calculation_filepath";
+   
+   public static final String TOOL_AGENT_FORMAL_PARAMETER_VARIABLES = "variables";
 
    public static final String TOOL_AGENT_LDAP_METHOD_getAllGroupEntries = "getAllGroupEntries";
 
